@@ -1,6 +1,7 @@
 Revision history for Music-FretboardDiagram
 
 {{$NEXT}}
+    - Add the showname attribute to show the chord name or not.
 
 0.0600 2019-02-27 15:03:07
     - Fix the reversed strings/notes problem when horizontally diagramming.
